作成手順書を修正

--- a/.config/intellisense/インテリセンス生成覚書.md
+++ b/.config/intellisense/インテリセンス生成覚書.md
@@ -34,3 +34,6 @@ npm install --save-dev @types/node
 ```linux
 ../node_modules/.bin/ts-node parse-cwl.ts <package name>.cwl
 ```
+
+## 配置
+生成された`json`を`.config/intellisense`に配置する
