テストを追加

--- a/数学/フォロワーのための数学/proposition_and_logic.tex
+++ b/数学/フォロワーのための数学/proposition_and_logic.tex
@@ -1,9 +1,13 @@
 \documentclass{jlreq}
 \input{settings}
+\usepackage{mystyle}
 
 \begin{document}
 
 \section{論理と命題}
 
+\begin{definition}
+  hgoge
+\end{definition}
 
 \end{document}
