feat: インテリセンス生成に2回目以降の対応を追加

--- a/.config/intellisense/インテリセンス生成覚書.md
+++ b/.config/intellisense/インテリセンス生成覚書.md
@@ -12,13 +12,13 @@ npm install n -g
 n stable
 apt purge -y nodejs npm
 exec $SHELL -l
-npm install --save typescript ts-node
+npm install --save typescript ts-node (2回目以降はいらないかも)
 ```
 `./dev`に移動して以下を実行：
 ```linux
-npm install --save-dev @types/node
+npm install --save-dev @types/node (2回目以降はいらないかも)
 ```
-`tsconfig.json`を以下のように修正：
+`tsconfig.json`を以下のように修正(2回目以降いらない)：
 ```json
 "target": "es2021",
 "lib": [
