my-commonを少し編集

--- a/.config/texmf-local/tex/latex/local/old/mystyle.sty
+++ b/.config/texmf-local/tex/latex/local/old/mystyle.sty
@@ -115,23 +115,23 @@
 \newcommand{\End}{\mathop{\mathrm{End}}\nolimits}	%自己準同型*
 \newcommand{\FixedPtMap}[1][\relax]{\Phi_{#1}}	%マーク準同型写像
 \newcommand{\FunctCat}[2]{{#2}^{#1}}	%関手圏
-\newcommand{\Hom}[1][\relax]{\mathop{\mathrm{Hom}}\nolimits_{#1}}	%Hom
-\newcommand{\id}{{\mathrm{id}}}	%恒等射
+\newcommand{\Hom}[1][\relax]{\mathop{\mathrm{Hom}}\nolimits_{#1}}	%Hom*
+\newcommand{\id}{{\mathrm{id}}}	%恒等射*
 \renewcommand{\Im}{\mathop{\mathrm{Im}}\nolimits}	%像
 \DeclareMathOperator{\Ker}{Ker}	%核
 \DeclareMathOperator*{\Lim}{Lim}	%射影極限
 \newcommand{\MarkHom}{\FixedPtMap}	%マーク準同型
 \newcommand{\Maps}[2]{{#2}^{#1}}	%写像全体
-\newcommand{\N}{\mathbb{N}} %自然数
+\newcommand{\N}{\mathbb{N}} %自然数*
 \newcommand{\Normalizer}[1][\relax]{\mathrm{N}_{#1}}	%正規化群
 \newcommand{\Op}[1]{{#1}^\mathrm{op}}	%opposite (肩)
 \newcommand{\OpOperator}[1]{{#1}_\mathrm{op}}	%opposite (下付き)
 \newcommand{\OrderGrp}[1]{\Card{#1}}	%群の位数
 \DeclareMathOperator{\Power}{\mathcal{P}}	%べき集合
-\newcommand{\Q}{\mathbb{Q}} %有理数
-\newcommand{\R}{\mathbb{R}} %実数
+\newcommand{\Q}{\mathbb{Q}} %有理数*
+\newcommand{\R}{\mathbb{R}} %実数*
 %\newcommand{\Tuple}[1]{\left\langle #1 \right\rangle}	%組
-\newcommand{\Z}{\mathbb{Z}} %整数
+\newcommand{\Z}{\mathbb{Z}} %整数*
 
 %%%%%%%%%%%%%%%　その他　%%%%%%%%%%%%%%%
 
