feat: 数式の途中改行を許可し、式番号にセクション番号を付与

--- a/.config/texmf-local/tex/latex/local/my-common.sty
+++ b/.config/texmf-local/tex/latex/local/my-common.sty
@@ -7,6 +7,14 @@
 \RequirePackage{amssymb}
 \RequirePackage[unicode=true]{hyperref}
 
+% Formatting ------------------------------------
+
+% 式番号にセクション番号を付与
+\numberwithin{equation}{section}
+
+% 数式の途中改行許可
+\allowdisplaybreaks[1]
+
 % functions -------------------------------------
 
 % 関数記号の定義を簡略化するマクロ
