fix: 変換手順を簡略化し、cwlファイルを一括処理するコマンドに変更

--- a/.config/intellisense/インテリセンス生成覚書.md
+++ b/.config/intellisense/インテリセンス生成覚書.md
@@ -32,7 +32,7 @@ npm install --save-dev @types/node (2回目以降はいらないかも)
 ## 変換
 `dev/`内で以下を実行：
 ```linux
-../node_modules/.bin/ts-node parse-cwl.ts <package name>.cwl
+ls cwl | xargs -I {} ../node_modules/.bin/ts-node parse-cwl.ts {}
 ```
 
 ## 配置
