fix: 数学記号のコマンド名を統一

--- a/.config/texmf-local/tex/latex/local/my-common.sty
+++ b/.config/texmf-local/tex/latex/local/my-common.sty
@@ -88,15 +88,15 @@
 % Symbols ---------------------------------------
 
 % 自然数の集合
-\NewDocumentCommand\naturals{}{\mathord{\mathbb{N}}}
+\NewDocumentCommand\naturalnumbers{}{\mathord{\mathbb{N}}}
 % 整数の集合
 \NewDocumentCommand\integers{}{\mathord{\mathbb{Z}}}
 % 有理数の集合
-\NewDocumentCommand\rationals{}{\mathord{\mathbb{Q}}}
+\NewDocumentCommand\rationalnumbers{}{\mathord{\mathbb{Q}}}
 % 実数の集合
-\NewDocumentCommand\reals{}{\mathord{\mathbb{R}}}
+\NewDocumentCommand\realnumbers{}{\mathord{\mathbb{R}}}
 % 複素数の集合
-\NewDocumentCommand\complexes{}{\mathord{\mathbb{C}}}
+\NewDocumentCommand\complexnumbers{}{\mathord{\mathbb{C}}}
 % ダミー変数
 \NewDocumentCommand\dummy{}{\mathord{-}}
 
@@ -109,7 +109,7 @@
 \NewDocumentCommand\norm{om}{\GenericTuple{\|}{\|}{#2}[#1]}
 
 % 内積
-\NewDocumentCommand\innerprod{omm}{\GenericTuple{\langle}{\rangle}{#2, #3}[#1]}
+\NewDocumentCommand\innerproduct{omm}{\GenericTuple{\langle}{\rangle}{#2, #3}[#1]}
 
 % Operators -------------------------------------
 
