GitHub Copilotにインテリセンスのdetail,doc生成jsを組んでもらった すごい

--- a/.config/intellisense/インテリセンス生成覚書.md
+++ b/.config/intellisense/インテリセンス生成覚書.md
@@ -37,3 +37,46 @@ ls cwl | xargs -I {} ../node_modules/.bin/ts-node parse-cwl.ts {}
 
 ## 配置
 生成された`json`を`.config/intellisense`に配置する
+
+## detail/docの適用
+
+### 準備
+各インテリセンスファイルに対して、`<basename>.details.json`ファイルを作成する。
+例：`my-common.json` → `my-common.details.json`
+
+### detailsファイルの形式
+```json
+{
+  "macros": {
+    "マクロ名": {
+      "detail": "簡潔な表示（記号など）",
+      "doc": "詳細な説明"
+    }
+  },
+  "envs": {
+    "環境名": {
+      "detail": "簡潔な表示",
+      "doc": "詳細な説明"
+    }
+  }
+}
+```
+
+### 適用方法
+`.config/intellisense`ディレクトリで以下を実行：
+
+```bash
+# 全てのインテリセンスファイルに適用
+node apply-details.js
+
+# 特定のファイルにのみ適用
+node apply-details.js my-common.json
+node apply-details.js my-common.json mystyle.json
+```
+
+### ワークフロー
+1. parse-cwl.tsでcwlファイルからJSONを生成
+2. `.config/intellisense`に配置
+3. `apply-details.js`でdetail/docを適用
+
+これにより、parse-cwl実行後も手動で追加したdetail/doc情報を保持できる。
